--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </section>
     <section id="club-ethos">
-        <h1>Why Love Running with Us?</h1>
+        <h2 id="welcome">Why Love Running with Us?</h2>
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>Feel Healthy</h2>
@@ -66,7 +66,9 @@
         </div>
 
         <div id="center-about">
-            
+            <div id="circle-container">
+                <div id="circle-cover-bg"></div>
+            </div>
         </div>
 
     </section>
