--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
 
     </section>
-    <section>
+    <section id="times">
         <div>
             <h2>Urban</h2>
             <h3>Monday</h3>
@@ -101,6 +101,13 @@
             <h3>10K</h3>
             <h3>The Phoenix Park</h3>
             <h3>09:30</h3>
+        </div>
+        <div>
+            <h2>Trail</h2>
+            <h3>Saturday</h3>
+            <h3>10K</h3>
+            <h3>The Phoenix Hotel</h3>
+            <h3>18:30</h3>
         </div>
         <div>
             <h2>Coffee</h2>
