--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <a href="index.html" class="active">Home</a>
                     </li>
                     <li>
-                        <a href="#">Gallery</a>
+                        <a href="gallery.html">Gallery</a>
                     </li>
                     <li>
                         <a href="#">Sign Up</a>
@@ -119,7 +119,7 @@
     </section>
 
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener" 
                 aria-label="visit our Facebook page (opensin a new tab)">
